--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,11 @@
         "php" : ">=7.1",
         "php-opencloud/openstack": "~3.0"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "v2"
+        }
+    },
     "require-dev" : {
         "phpunit/phpunit": "~4.5",
         "sami/sami": "dev-master",
